# speakhuman

./: .readthedocs.yml  Cargo.toml  README.md  RELEASING.md  example.py  mkdocs.yml  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md
benchmarks/: bench_compare.py
docs/: filesize.md  i18n.md  index.md  lists.md  number.md  time.md
examples/: 01_numbers.ipynb  02_file_sizes.ipynb  03_time_and_dates.ipynb  04_lists_and_more.ipynb  05_benchmarks.ipynb
humanize-rs/: Cargo.toml
humanize-rs/src/: bench.rs  filesize.rs  i18n.rs  lib.rs  lists.rs  number.rs  time.rs
rust_src/: lib.rs
scripts/: generate-translation-binaries.sh  update-translations.sh
speakhuman-rs/: Cargo.toml
speakhuman-rs/src/: bench.rs  filesize.rs  i18n.rs  lib.rs  lists.rs  number.rs  time.rs
src/speakhuman/: __init__.py  filesize.py  i18n.py  lists.py  number.py  time.py
src/speakhuman/locale/ar/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/bn_BD/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/ca_ES/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/da_DK/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/de_DE/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/el_GR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/eo/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/es_ES/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/eu/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/fa_IR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/fi_FI/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/fr_FR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/he_IL/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/hu_HU/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/id_ID/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/it_IT/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/ja_JP/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/ko_KR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/nb/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/nl_NL/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/pl_PL/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/pt_BR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/pt_PT/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/ru_RU/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/sk_SK/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/sl_SI/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/sv_SE/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/tlh/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/tr_TR/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/uk_UA/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/uz/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/vi_VN/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/zh_CN/LC_MESSAGES/: speakhuman.po
src/speakhuman/locale/zh_HK/LC_MESSAGES/: speakhuman.po
tests/: test_filesize.py  test_i18n.py  test_lists.py  test_number.py  test_time.py
