[package]
name = "_speakhuman_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_speakhuman_rs"
crate-type = ["cdylib"]
path = "rust_src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
speakhuman = { package = "speakhuman-core", path = "speakhuman-rs" }
chrono = "0.4"
