[build-system]
build-backend = "maturin"
requires = [
  "maturin>=1.7,<2.0",
]

[project]
name = "speakhuman"
description = "Rust-accelerated fork of the Python humanize library"
readme = "README.md"
keywords = [
  "speakhuman humanize time size",
]
license = "MIT"
license-files = [ "LICENCE" ]
maintainers = [ { name = "Hugo van Kemenade" } ]
authors = [ { name = "Jason Moiron", email = "jmoiron@jmoiron.net" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: General",
]
version = "0.1.1"
optional-dependencies.tests = [
  "freezegun",
  "pytest",
  "pytest-cov",
]
urls.Homepage = "https://github.com/jackburrus/speakhuman"
urls."Issue tracker" = "https://github.com/jackburrus/speakhuman/issues"
urls."Release notes" = "https://github.com/jackburrus/speakhuman/releases"
urls.Source = "https://github.com/jackburrus/speakhuman"

[tool.maturin]
python-source = "src"
module-name = "speakhuman._speakhuman_rs"
include = [
  { path = "src/speakhuman/locale/**/*.mo", format = "sdist" },
  { path = "src/speakhuman/locale/**/*.mo", format = "wheel" },
]

[tool.ruff]
fix = true

lint.select = [
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # pycodestyle errors
  "EM",     # flake8-errmsg
  "F",      # pyflakes
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RUF022", # unsorted-dunder-all
  "RUF100", # unused noqa (yesqa)
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E203",   # Whitespace before ':'
  "E221",   # Multiple spaces before operator
  "E226",   # Missing whitespace around arithmetic operator
  "E241",   # Multiple spaces after ','
  "PIE790", # flake8-pie: unnecessary-placeholder
]
lint.per-file-ignores."tests/*" = [
  "D",
]
lint.flake8-import-conventions.aliases.datetime = "dt"
lint.flake8-import-conventions.banned-from = [ "datetime" ]
lint.flake8-pytest-style.parametrize-names-type = "csv"
lint.isort.known-first-party = [ "speakhuman" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "google"
lint.future-annotations = true

[tool.pyproject-fmt]
max_supported_python = "3.15"

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
  "error",
]
testpaths = [ "tests" ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",
]

[tool.mypy]
pretty = true
strict = true
show_error_codes = true
