[package]
name = "speakhuman-core"
version = "0.1.0"
edition = "2021"
description = "Speakhuman - humanizing functions for numbers, dates, times, and file sizes - Rust port of Python humanize"
license = "MIT"

[lib]
name = "speakhuman"

[dependencies]
chrono = "0.4"
regex = "1"
num-traits = "0.2"
once_cell = "1"

[dev-dependencies]

[[bin]]
name = "speakhuman-bench"
path = "src/bench.rs"
